# Graphics-Utilities

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CppProperties.json  Readme.md  add_libraries.cmake  shaders
examples/: CMakeLists.txt  all_executables.cmake
examples/00_equilateral_to_cubemap/: CMakeLists.txt  main.cpp
examples/01_color_normalization/: 01_color_normalization.cpp  CMakeLists.txt  Readme.md
examples/01_color_normalization/shaders/: center_point.frag  center_point.vert  cube.frag  cube.vert  cube_front.frag  gizmo.frag  gizmo.vert  image.frag  points.frag  points.vert  shaders.hpp  shaders.hpp.in
examples/02_forward_renderer/: light.cpp  light.hpp  main.cpp  mesh.cpp  mesh.hpp
examples/02_sound/: main.cpp
examples/03_ai/: main.cpp
examples/03_bidirectional_pathtracer/: main.cpp
examples/04_marching_squares/: CMakeLists.txt  Readme.md  main.cpp
examples/04_marching_squares/shaders/: seg.frag  seg.geom  seg.vert  shaders.hpp  shaders.hpp.in
examples/05_implementation_tests/: main.cpp
examples/05_nana/: main.cpp
examples/05_qt/: main.cpp
examples/06_descriptors/: CMakeLists.txt  camera.hpp  cie.hpp  descriptors.cpp  descriptors.hpp  input.hpp  input_glfw.cpp  input_glfw.hpp  input_qt.cpp  input_qt.hpp  main.cpp  main.cpp~RF3db13a19.TMP  main.cpp~RF3de52e16.TMP  mesh.cpp  mesh.hpp  prototype.cpp  prototype.hpp  prototype.inl  worker.hpp
examples/06_descriptors/graphics/: buffer.hpp  buffer.inl  commands.cpp  commands.hpp  device.cpp  device.hpp  extensions.cpp  extensions.hpp  formats.hpp  graphics.hpp  graphics.natvis  image.cpp  image.hpp  info.hpp  instance.cpp  instance.hpp  queue.cpp  queue.hpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  types.hpp  version.hpp  vulkan.natvis
examples/06_descriptors/shaders/: bsdf.glsl  bvh.glsl  geometry.glsl  path.hpp  random.glsl  sample.glsl  shaders.hpp  shaders.hpp.in  spectral.frag
examples/06_sail_simulation/: main.cpp
examples/07_meshing/: CMakeLists.txt  Readme.md  main.cpp
examples/07_meshing/shaders/: mesh.frag  mesh.vert  outline.vert  points.vert  shaders.hpp  shaders.hpp.in
examples/08_point_detection/: CMakeLists.txt  main.cpp
examples/08_tomasi_kanade/: main.cpp
examples/09_bv_stuff/: main.cpp
examples/10_ecs/: main.cpp  mat.hpp  quat.hpp  vec.hpp  vec.inl  vec_ops.inl
examples/10_ecs/mat/: mat_make.inl  mat_mul.inl  mat_ops.inl
examples/10_ecs/vec/: vec.inl  vec_apply.inl  vec_ops.inl  vec_std.inl
examples/11_delaunay/: main.cpp
examples/11_pathtracer_incremental/: Readme.md  main.cpp  mesh.hpp
examples/12_bezier/: main.cpp
examples/12_boids/: CMakeLists.txt  Readme.md  main.cpp
examples/12_boids/shaders/: render_points.frag  render_points.geom  render_points.vert  shaders.hpp  shaders.hpp.in  update.comp
examples/13_cubemap_filter/: main.cpp
examples/13_ibl/: CMakeLists.txt  Readme.md  main.cpp
examples/13_ibl/shaders/: brdf_lut.frag  cubemap_filter.vert  cubemap_filter_diffuse.frag  cubemap_filter_specular.frag  mesh_unique.frag  mesh_unique.vert  shaders.hpp  shaders.hpp.in  skybox.frag  skybox.vert
examples/14_cubemapper/: CMakeLists.txt  Readme.md  main.cpp
examples/14_cubemapper/shaders/: shaders.hpp  shaders.hpp.in  skybox.frag  skybox.vert
examples/15_win32_window/: main.cpp
examples/16_new_runnable/: main.cpp
examples/17_instanced/: interaction.cpp  interaction.hpp  main.cpp  main.cpp~RF215b7a7.TMP  main.cpp~RF22393cf.TMP
examples/17_instanced/proto/: prototype.hpp
examples/17_proto/: CMakeLists.txt  Readme.md  csm.hpp  graphics.hpp  interaction.cpp  interaction.hpp  main.cpp  movement.cpp  movement.hpp  prototype.hpp  prototype_system.hpp  terrain.hpp
examples/17_proto/proto/: prototype.hpp
examples/AMR_assignment01/: CMakeLists.txt  main.cpp
examples/AMR_assignment02/: CMakeLists.txt  MatrixIO.cpp  MatrixIO.h  SlamGraph.cpp  SlamGraph.h  main.cpp
examples/cloud/: CMakeLists.txt  main.cpp
examples/equilateral_to_cubemap/: CMakeLists.txt  Readme.md  main.cpp
examples/file/: CMakeLists.txt  main.cpp  relative.hpp  relative.hpp.in
examples/libs/: CMakeLists.txt  main.cpp
examples/pt_simple/: CMakeLists.txt  main.cpp
examples/res/: .gitignore  app.rc  app.rc.in  resource.h
examples/shader_test/: CMakeLists.txt  shader.frag
examples/something/: CMakeLists.txt  main.cpp
examples/vk_and_gl/: CMakeLists.txt  app.hpp  buffer.hpp  buffer.inl  camera.hpp  globals.hpp  input_glfw.cpp  input_qt.cpp  main.cpp  opengl.cpp  opengl.hpp  prototype.cpp  prototype.hpp  prototype.inl  scene.hpp  shader_lib.cpp  shader_lib.hpp  vulkan.cpp  vulkan.hpp
ext/: CMakeLists.txt
ext/assimp/: CMakeLists.txt
ext/eigen/: CMakeLists.txt
ext/mygl/: CMakeLists.txt
ext/mygl/mygl/: mygl.hpp  (+7 more)
ext/nana/: CMakeLists.txt
ext/soloud/: CMakeLists.txt
ext/vulkan/: CMakeLists.txt
src/: CMakeLists.txt  executable.cpp  executable.hpp  runnable.hpp  test.frag  test.vert
src/gfx/: alias.inl  api.hpp  callbacks.hpp  camera.hpp  context.cpp  context.hpp  file.hpp  geometry.hpp  gfx.hpp  imgui.hpp  input.hpp  log.hpp  math.cpp  math.hpp  res.hpp  spline.hpp  type.hpp
src/gfx.core/: CMakeLists.txt
src/gfx.default_app/: CMakeLists.txt
src/gfx.ecs/: CMakeLists.txt
src/gfx.ecs.components/: CMakeLists.txt
src/gfx.ecs.defaults/: CMakeLists.txt
src/gfx.ecs.defaults2/: CMakeLists.txt
src/gfx.file/: .gitignore  CMakeLists.txt
src/gfx.graphics/: CMakeLists.txt
src/gfx.legacy/: .gitignore  CMakeLists.txt
src/gfx.legacy.executable/: CMakeLists.txt  executable.cpp  executable.hpp
src/gfx.math/: CMakeLists.txt
src/gfx.shaders/: CMakeLists.txt
src/openal/: listener.hpp  source.hpp
src/opengl/: buffer.hpp  command_list.hpp  framebuffer.hpp  opengl.hpp  pipeline.hpp  query.hpp  shader_include.hpp.in  state.hpp  texture.hpp  uniform.hpp
src/res/: mygl_settings.xml
src/shaders/: .gitattributes  CMakeLists.txt  api.glsl
tests/: CMakeLists.txt
tests/tests/: CMakeLists.txt  test_host_image.cpp  test_host_image_vk.cpp  test_int_compare.cpp
(+1575 files in other folders)
